# gtm-pack-generator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  emiva.a2a.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4b8bc8eadc04_add_timestamps_to_launchcandidate.py  5708fef3a7ad_initial_schema.py  c4a9420d4469_add_missing_asset_types.py
app/: main.py
app/agent/: context.py  generators.py  llm.py  prompts.py
app/api/routes/: generate.py
app/core/: llm_providers.py  logger.py  settings.py
app/db/: __init__.py  crud.py  schema.py
app/services/: learning.py  pack_generator.py
docs/test-reports/: gtm-pack-generation-test-report.md
emiva-data-work/: README.md  main.py  requirements.txt  view_changes.py  view_data.py
emiva-data-work/connectors/: github_connector.py  jira_connector.py  slack_connector.py
emiva-data-work/database/: db.py
emiva-data-work/services/: change_event_processor.py  webhook_service.py
emiva_api/: main.py  pyproject.toml
emiva_api/api/: __init__.py
emiva_api/api/routes/: crud.py
emiva_api/emiva_api/api/routes/: crud.py
emiva_core/: pyproject.toml
emiva_core/api/: __init__.py  crud.py
emiva_core/core/: llm_providers.py  settings.py
emiva_core/db/: __init__.py  crud.py
emiva_core/emiva_core/core/: observability.py
emiva_core/emiva_core/db/: crud.py  database.py  schema.py
gtm_core/core/: settings.py
gtm_core/db/: crud.py
gtm_pack_generator/: main.py  pyproject.toml
gtm_pack_generator/agent/: context.py  generators.py  gtm_agent.py  llm.py
gtm_pack_generator/api/routes/: crud.py  generate.py
gtm_pack_generator/core/: settings.py
gtm_pack_generator/db/: __init__.py  crud.py
gtm_pack_generator/gtm_pack_generator/agent/: __init__.py  context.py
gtm_pack_generator/gtm_pack_generator/services/: learning.py
gtm_pack_generator/services/: learning.py  pack_generator.py
gtm_pack_generator/tests/: test_gtm_pack_generation.py
gtm_pack_generator/tests/cassettes/: gtm_pack_generation.yaml
gtm_pack_generator/tests/integration/: test_gtm_pack_generation_results.md
gtm_pack_generator/tests/integration/cassettes/: gtm_pack_generation.yaml
ingestion/: .gitignore  README.md  main.py
ingestion/connectors/: github_connector.py  jira_connector.py
ingestion/database/: db.py
ingestion/services/: change_event_processor.py  webhook_service.py
injestion/: config.py  main.py
injestion/database/: ingestion.db
injestion/services/: change_event_processor.py
scripts/: seed-database.py  seed-narrative.json
tests/: test_settings.py
tests/integration/: test_gtm_pack_generation.py
tests/integration/cassettes/: gtm_pack_generation.yaml
tests/unit/: test_settings.py
