[project]
name = "gtm-pack-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "faker>=40.11.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "sqlalchemy>=2.0.48",
    "langchain-groq>=1.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "vcrpy>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
