[project]
name = "emiva-workspace"
version = "0.1.0"
description = "Emiva Monorepo Workspace"
requires-python = ">=3.12"
dependencies = [
    "uvicorn>=0.42.0",
    "httpx>=0.27.0",
    "emiva_core",
    "gtm_pack_generator",
    "emiva_api",
]

[tool.uv.workspace]
members = ["emiva_core", "emiva_api", "gtm_pack_generator"]

[tool.uv.sources]
emiva_core = { workspace = true }
emiva_api = { workspace = true }
gtm_pack_generator = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "vcrpy>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
