[project]
name = "emiva_core"
version = "0.1.0"
description = "Shared core library for Emiva"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.48",
    "pydantic-settings>=2.13.1",
    "psycopg2-binary>=2.9.11",
    "python-json-logger>=2.0.7",
    "alembic>=1.18.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"emiva_core" = "emiva_core"

[tool.setuptools]
packages = ["emiva_core", "emiva_core.core", "emiva_core.db"]
