[project]
name = "emiva_core"
version = "0.1.0"
description = "Shared core library for Emiva"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.48",
    "pydantic-settings>=2.13.1",
    "psycopg2-binary>=2.9.11",
    "python-json-logger>=2.0.7",
    "alembic>=1.18.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emiva_core"]
