[project]
name = "gtm_pack_generator"
version = "0.1.0"
description = "Agentic GTM Pack Generation Service"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-groq>=1.1.2",
    "arize-phoenix>=4.32.0",
    "openinference-instrumentation-langchain>=0.1.30",
    "httpx>=0.27.0",
    "emiva_core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gtm_pack_generator"]

[tool.uv.sources]
emiva_core = { workspace = true }
